[build-system]
requires = [
    "setuptools>=58.0.4",
    "wheel>=0.37.0",
    "twine>=3.4.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "smslib"
version = "0.1.0"
description = "Python library for sending SMS messages via email-to-SMS gateways"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = []

[project.scripts]
notify = "smslib.notify:main"
